# we_share_api

./: Cargo.toml  Dockerfile
.github/workflows/: docker-publish.yml
src/: endpoints.rs  main.rs  models.rs
