[package]
name = "we_share_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6"
poem = "1.3"
poem-openapi = { version = "3", features = ["swagger-ui", "openapi-explorer", "rapidoc", "redoc"] }
tokio = { version = "1.33", features = ["full"] }