[package]
name = "we_share_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6"
poem = "1.3"
poem-openapi = { version = "3", features = ["swagger-ui", "openapi-explorer", "bson"] }
tokio = { version = "1", features = ["full"] }
mongodb = "2.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures = { version = "0.3", features = [] }
